yaml/step-3-create-api-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksapp-api-2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aksapp-api
      version: "v2"
  template:
    metadata:
      labels:
        app: aksapp-api
        version: "v2"
    spec:
      containers:
      - name: aksapp-api
        image: aksapp.azurecr.io/api:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
