yaml/step2-update-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-app-2-0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aks-app
      version: v2
  template:
    metadata:
      labels:
        app: aks-app
        version: v2
    spec:
      containers:
      - name: aks-app
        image: {ACRname}.azurecr.io/aksapp:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
