yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksapp-api-1-0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aksapp-api
      version: "v1"
  template:
    metadata:
      labels:
        app: aksapp-api
        version: "v1"
    spec:
      containers:
      - name: aksapp-api
        image: {ACRname}.azurecr.io/api:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksapp-api-2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aksapp-api
      version: "v2"
  template:
    metadata:
      labels:
        app: aksapp-api
        version: "v2"
    spec:
      containers:
      - name: aksapp-api
        image: {ACRname}.azurecr.io/api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: aksapp-api
  labels: 
    app: aksapp-api
spec:
  ports:
  - port: 3001
    name: http
  selector:
    app: aksapp-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksapp-web-1-0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aksapp-web
      version: "v1"
  template:
    metadata:
      labels:
        app: aksapp-web
        version: "v1"
    spec:
      containers:
      - name: aksapp-web
        image: {ACRname}.azurecr.io/web:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: aksapp-web
  labels: 
    app: aksapp-web
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: aksapp-web
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aksapp-web
spec:
  hosts:
  - "*"
  gateways:
  - aksapp-web-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: aksapp-web.aksapp.svc.cluster.local
        subset: v1-0
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: aksapp-web
spec:
  host: aksapp-web.aksapp.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0
    labels:
      app: aksapp-web
      version: "v1"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: aksapp-api
spec:
  host: aksapp-api.aksapp.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0
    labels:
      app: aksapp-api
      version: "v1"
  - name: v2-0
    labels:
      app: aksapp-api
      version: "v2"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aksapp-api
spec:
  hosts:
  - aksapp-api.aksapp.svc.cluster.local
  http:
  - match:
    - sourceLabels:
        app: aksapp-web
        version: "v1"
    route:
    - destination:
        host: aksapp-api.aksapp.svc.cluster.local
        subset: v1-0
        port:
          number: 3001
      weight: 80
    - destination:
        host: aksapp-api.aksapp.svc.cluster.local
        subset: v2-0
        port:
          number: 3001
      weight: 20
