yaml/step-2-create-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aksapp-web
spec:
  hosts:
  - "*"
  gateways:
  - aksapp-web-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: aksapp-web.aksapp.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aksapp-web-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
