yaml/step-5-update-api-canary-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aksapp-api
spec:
  hosts:
  - aksapp-api.aksapp.svc.cluster.local
  http:
  - match:
    - sourceLabels:
        app: aksapp-web
        version: "v1"
    route:
    - destination:
        host: aksapp-api.aksapp.svc.cluster.local
        subset: v1-0
        port:
          number: 3001
      weight: 0
    - destination:
        host: aksapp-api.aksapp.svc.cluster.local
        subset: v2-0
        port:
          number: 3001
      weight: 100
