yaml/step1-create-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aks-app
spec:
  hosts:
  - "*"
  gateways:
  - aks-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: aks-app.aksapp.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aks-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
