yaml/step2-update-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aks-app
spec:
  hosts:
  - "*"
  gateways:
  - aks-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: aks-app.aksapp.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 80
    - destination:
        host: aks-app.aksapp.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: aks-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: aksapp-destination
spec:
  host: aks-app.aksapp.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
